[gd_scene format=3 uid="uid://c5275e6ero78m"]

[ext_resource type="Theme" uid="uid://bhed8krggwjc0" path="res://Objects/WorldObjects/ShopMachineObject/ShopMachineTheme.tres" id="1_cux2w"]
[ext_resource type="Script" uid="uid://wayu1pbwd1hm" path="res://Objects/Settings/settingElement.gd" id="2_6he2g"]

[node name="SettingElement" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cux2w")
script = ExtResource("2_6he2g")

[node name="HSplitContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HSplitContainer"]
layout_mode = 2
text = "SettingName"

[node name="ToggleCheckButton" type="CheckButton" parent="HSplitContainer"]
layout_mode = 2

[connection signal="pressed" from="HSplitContainer/ToggleCheckButton" to="." method="_on_toggle_check_button_pressed"]
